 	* fix bug in udp_socket when changing socks5 proxy quickly

0.16.17 release

	* don't fall back on wildcard port in UPnP
	* fix local service discovery for magnet links
	* fix bitfield issue in file_storage
	* added work-around for MingW issue in file I/O
	* fixed sparse file detection on windows
	* fixed bug in gunzip
	* fix to use proxy settings when adding .torrent file from URL
	* fix resume file issue related to daylight savings time on windows
	* improve error checking in lazy_bdecode

0.16.16 release

	* add missing add_files overload to the python bindings
	* improve error handling in http gunzip
	* fix debug logging for banning web seeds
	* improve support for de-selected files in full allocation mode
	* fix dht_bootstrap_alert being posted
	* SetFileValidData fix on windows (prevents zero-fill)
	* fix minor lock_files issue on unix

0.16.15 release

	* fix mingw time_t 64 bit issue
	* fix use of SetFileValidData on windows
	* fix crash when using full allocation storage mode
	* improve error_code and error_category support in python bindings
	* fix python binding for external_ip_alert

0.16.14 release

	* make lt_tex more robust against bugs and malicious behavior
	* HTTP chunked encoding fix
	* expose file_granularity flag to python bindings
	* fix DHT memory error
	* change semantics of storage allocation to allocate on first write rather
	  than on startup (behaves better with changing file priorities)
	* fix resend logic in response to uTP SACK messages
	* only act on uTP RST packets with correct ack_nr
	* make uTP errors log in normal log mode (not require verbose)
	* deduplicate web seed entries from torrent files
	* improve error reporting from lazy_decode()

0.16.13 release

	* fix auto-manage issue when pausing session
	* fix bug in non-sparse mode on windows, causing incorrect file errors to
	  be generated
	* fix set_name() on file_storage actually affecting save paths
	* fix large file support issue on mingw